@@ -73,5 +73,21 @@
         <remarks />
       </Docs>
     </Member>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public Argv (string [] args, bool add_program_name);" />
+      <MemberType>Constructor</MemberType>
+      <ReturnValue />
+      <Parameters>
+        <Parameter Name="args" Type="System.String[]" />
+        <Parameter Name="add_program_name" Type="System.Boolean" />
+      </Parameters>
+      <Docs>
+        <summary>Public constructor</summary>
+        <param name="args">a <see cref="T:System.String" /></param>
+        <param name="add_program_name">a <see cref="T:System.Boolean" /></param>
+        <returns>a <see cref="T:GLib.Argv" /></returns>
+        <remarks>If <paramref name="add_program_name"/> is <see langword="true"/>, the native argv will also contain a leading string containing the program name reported in the first element of the array returned by <see cref="M:System.Environment.GetCommandLineArgs"/>.</remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
