@@ -1,5 +1,10 @@
 2005-01-11  Mike Kestner  <mkestner@novell.com>
 
+	* glib/Argv.cs : add automatic progname handling.
+	* gdk/Global.custom : kill obsolete warnings by using GLib.Argv.
+
+2005-01-11  Mike Kestner  <mkestner@novell.com>
+
 	* gdk/Gdk.metadata : kill Colors since its methods are deprecated
 	and it doesn't exist in 1.0.
 
